RESOLVED FIXED 262086
REGRESSION(266828@main): Nested setTimeout not being throttled in the background
https://bugs.webkit.org/show_bug.cgi?id=262086
Summary REGRESSION(266828@main): Nested setTimeout not being throttled in the background
Ryosuke Niwa
Reported 2023-09-25 16:55:22 PDT
After 266828@main, nested setTimeout doesn't get throttled. <rdar://115902836>
Attachments
Ryosuke Niwa
Comment 1 2023-09-25 17:05:05 PDT
EWS
Comment 2 2023-09-26 10:26:51 PDT
Committed 268460@main (e49305511b1a): <https://commits.webkit.org/268460@main> Reviewed commits have been landed. Closing PR #18199 and removing active labels.
Fujii Hironori
Comment 3 2023-09-26 22:11:54 PDT
Ryosuke Niwa
Comment 4 2023-09-27 09:53:27 PDT
EWS
Comment 5 2023-09-28 07:50:38 PDT
Committed 268585@main (bdd0a5694f21): <https://commits.webkit.org/268585@main> Reviewed commits have been landed. Closing PR #18287 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.