Cherry-pick e49305511b1a. rdar://115902836

REGRESSION(266828@main): Nested setTimeout not being throttled in the background
    https://bugs.webkit.org/show_bug.cgi?id=262086
    <rdar://115902836>

    Reviewed by Chris Dumez.

    The bug was caused by TimerAlignment and hasReachedMaxNestingLevel state getting set after
    the timer had already been scheduled. We need to update these states before we schedule it.

    To do this, new variants of scheduleTask and scheduleRepeatingTask which takes TimerAlignment
    and hasReachedMaxNestingLevel boolean as arguments are added and deployed them in DOMTimer.

    * LayoutTests/fast/dom/timer-throttling-hidden-page-2-expected.txt: Added.
    * LayoutTests/fast/dom/timer-throttling-hidden-page-2.html: Added.
    * LayoutTests/platform/ios/TestExpectations:
    * LayoutTests/platform/wpe/TestExpectations:
    * Source/WebCore/dom/EventLoop.cpp:
    (WebCore::EventLoop::scheduleTask):
    (WebCore::EventLoop::scheduleRepeatingTask):
    (WebCore::EventLoopTaskGroup::scheduleTask):
    (WebCore::EventLoopTaskGroup::scheduleRepeatingTask):
    (WebCore::EventLoopTaskGroup::setTimerAlignment): Deleted.
    * Source/WebCore/dom/EventLoop.h:
    * Source/WebCore/page/DOMTimer.cpp:
    (WebCore::DOMTimer::DOMTimer):

    Canonical link: https://commits.webkit.org/268460@main

Identifier: 266246.1736@safari-7617-branch